[package]
name = "lunes-mcp-server"
version = "0.2.0"
edition = "2021"
description = "Secure agent gateway for Lunes Network tooling"
publish = false

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# JSON-RPC Server
jsonrpsee = { version = "0.24", features = ["server", "macros"] }

# HTTP middleware
tower = "0.4"
http = "1"

# Cryptography (Agent Key generation + secure memory)
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
rand = "0.8"
secrecy = "0.10"

# Concurrency (non-poisoning Mutex)
parking_lot = "0.12"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time (TTL, daily limit windows)
chrono = { version = "0.4", features = ["serde"] }

# Hex encoding (keys, signatures)
hex = "0.4"
