[package]
name = "lunes-mcp-server"
version = "0.2.0"
edition = "2021"
rust-version = "1.88"
description = "Secure agent gateway for Lunes Network tooling"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
jsonrpsee = { version = "0.24", features = ["server", "ws-client"] }
tower = "0.4"
http = "1"
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
rand = "0.8"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
blake2 = "0.10"
bs58 = "0.5"
subxt = { version = "0.50.1", default-features = false, features = ["jsonrpsee", "native"] }
